--- a/gamer.css
+++ b/gamer.css
@@ -172,7 +172,7 @@ text-align: center;
 /* icon section */
 .game-icon{
   text-align: center;
-  margin: 40px;
+  margin-bottom: 70px;
 }
 .button-icon{
   border: 1px solid #5a0a7a;
